# fst-writer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: 2fst.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fstapi_diff.rs
proptest-regressions/: buffer.txt
src/: buffer.rs  io.rs  lib.rs  types.rs  writer.rs
tests/: simple.fst  write_read.rs
