# Copyright 2024 Cornell University
# released under BSD 3-Clause License
# author: Kevin Laeufer <laeufer@cornell.edu>

[package]
name = "fst-writer"
version = "0.2.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Kevin Laeufer <laeufer@cornell.edu>"]
description = "A Rust library for writing waveform traces in the FST format."
repository = "https://github.com/ekiwi/fst-writer"
license = "BSD-3-Clause"
keywords = ["fst", "waveform", "wavedump"]

[dependencies]
lz4_flex = "0.11.3"
thiserror = "1.0.64"
twox-hash = { version = "1.6.3", default-features = false }

[dev-dependencies]
fst-native = "0.8.1"
